Replace Runtime#exec() with ProcessBuilder
This is necessary if a process fills stdout or stderr as this could
block the child process.